Bookmark tiles scroll, fix overflow

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -34,6 +34,7 @@
 .content-section {
     //background-color: cadetblue;
     flex-grow: 1; //grows to maximum size of free space
+    min-height: 0;
 }
 
 .bottom-section {
