--- a/src/app/bookmark-tile/bookmark-tile.component.scss
+++ b/src/app/bookmark-tile/bookmark-tile.component.scss
@@ -3,13 +3,15 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    
     gap: 12px;
+    padding: 10px;
 
     background: rgba(black, 0.55);
     border-radius: 5px;
 
-    width: 100px;
-    height: 100px;
+    width: 110px;
+    height: 105px;
 
     cursor: pointer;
     
@@ -28,10 +30,16 @@
 }
 
 .bookmark-tile img {
-    font-size: 14px;
     max-width: 32px;
 }
 
 .tile-text {
+    font-size: 14px;
     color: rgba(white, 0.85);
+
+    // prevent text overflow from tile
+    max-width: 100%;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
